samples/_failures_safe/1761296500_fe1c7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f267099.c: In function ‘main’:
./samples/SAFE/__tmp_4f267099.c:163:33: error: expected ‘)’ at end of input
  163 |     if (scanf("%d", &start) != 1
      |        ~                        ^
      |                                 )
./samples/SAFE/__tmp_4f267099.c:163:5: error: expected declaration or statement at end of input
  163 |     if (scanf("%d", &start) != 1
      |     ^~
